======================
Changes for Crate Data
======================

Unreleased
==========

 - remove documentation about information_schema.indices (which is not
   implemented).

 - improved error handling if illegal arguments are used in COPY FROM or COPY
   TO statements.

 - improved COPY TO documentation.

2014/08/01 0.40.4
=================

- fix: always return rowcount, even when it's not ascertenaible.
  In this cases -1 is returned.

- fix: composite index must only work with `string` typed columns,
  also defining it using the `plain` method must result in `keyword` analyzer

- fix: using non-equality comparison of a partition column within
  `AND` expressions results in empty row set


2014/07/28 0.40.3
=================

 - fix: ORDER BY using non-indexed (index off) column do fail silently

 - fix: grouping or global aggregation using non-indexed (index off)
   or analyzed (fulltext) column throws misleading exception

 - added documentation for match function

 - replaced SQLAction python doctest with java integration test

 - updated incorrect options in crate usage information

 - updated crate-admin to 0.9.1 which includes following changes

    - fix: do not append limit to insert by query statement


2014/07/21 0.40.2
=================

 - updated crash to 0.9.14 which includes the following changes

    - fix: correctly apply ``-v`` switch to increase verbosity

    - update crate-python to version 0.10.6

 - made ``bin/crash`` posix compatible

 - improved substr function to not copy underlying byte array

 - retry fetching objects from s3 if a connection error occures

2014/07/15 0.40.1
=================

 - fix: expose close() in crate client

 - fix: make timeout of ``insert by query`` request configurable
   as ``insert_by_query.request_timeout``

 - fix: there was a possible race condition that could occur during blob
   relocation.

 - fix: fetch all keys from buckets with more than 1000 files
   for import from S3
